<resources>
    <string name="app_name">IIITA MUN \'18</string>
    <string name="action_settings">Settings</string>
    <string name="Home_page">"HOME"</string>
    <string name="sec_gen_title"><b>MESSAGE FROM THE SECRETARY GENERAL</b></string>
    <string name="sec_gen_title_name"><b>SECRETARY GENERAL</b></string>
    <string name="sec_gen_name"><b>MANTEK SINGH</b></string>
    <string name="disec_short"><b>DISEC</b></string>
    <string name="unsc_short"><b>UNSC</b></string>
    <string name="apply_as"><b>Apply as : </b></string>
    <string name="disec_long"><b>Disarmament and International Security Committee</b></string>
    <string name="unsc_long"><b>United Nations Security Council</b></string>
    <string name="mun_iiita"><b>Diplomacy and its Zenith</b></string>
    <string name="sec_general_msg">"Dear Delegates, Sponsors, and Friends of SMH-MUN,

It is with great honor that I address you all. I have the immense privilege of leading our Model United Nations Conference, SMH-MUN VI. Our theme this year is MOVEMENT: Understanding the Past and Creating the Future. At Saint Mary’s Hall, we believe that the ability to discuss and attempt to solve the issues plaguing the world stage is a chance everyone must take advantage of, especially young people.

My team, the Secretariat, and I thought long and hard about our theme this year. We wanted to focus on progress and how to achieve that much-desired world peace and prosperity so emphasized by the United Nations, but we did not want to overlook the hidden answers and causes of global conflict. And we firmly believe these answers are hidden in the folds of time, locked away in the past – but certainly accessible to those who seek them out.

The past and the future clash in more ways than one. A country that refuses to accept the influxes of new cultural traditions and ideas. An international community that fails to stand with those who are suffering from war or epidemics. Politicians who are so caught up in old ideals that they forget to open their eyes to the future that is at stake. These circumstances are all the result of society’s inability to move forward, the incapacity to learn from the past, but let it go in order to sculpt a more perfect future.

It takes careful examination to assess our history, and it takes even more observation to connect the puzzle pieces into the greater picture – the path that has led us to where we are today. The challenge of reconciling the past and the present is enough to puzzle the greatest minds, let alone the endeavor of trying to shape the future based on what we know of our history. Here at SMH-MUN VI, we believe you are up for the test. We believe you have the determination, the intellect, and the collaborative skills it takes to analyze what humanity has done wrong in the past, and how we can prevent such mistakes from trapping us in an endless cycle.

SMH-MUN, through the years, has offered successful crisis committees. For instance, we had two joint crisis committees last year. In the spirit of innovation and progress, the Secretariat Team has decided to try a new idea for this conference: a three-way crisis. We are confident that this new endeavor will encourage delegates to really examine an issue at its core and collaborate with an even greater and more diverse group of individuals.

As you prepare for SMH-MUN VI, I encourage you to open your minds to different possibilities and solutions, even ones you originally might not have supported. Integral to what we do as MUN delegates are the values of cooperation among thinkers and tolerance of ideas. Represent the player you’ve been assigned with accuracy and grace, but always remember to listen. Most importantly, believe in your committee’s ability to solve the problem at hand, and believe in the significance of your work.


Warmest Regards,

meera karkar
Secretary-General"</string>
    <string name="title_activity_about_mun">About MUN</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="about_mun">To put it simply, Model UN is cos-play for people who find following current affairs equally interesting as a nerd would find his comics. However, MUN conferences differ from Comic Cons in that the delegates actually do use their superpowers of research, critical thinking, public speaking and teamwork to draft solutions to issues that have kept diplomats scratching their heads over the years. It is easy to dismiss MUNs as simply a simulation of the UN framework, but that would only tell the beginning of the story. (Not even the beginning, as modern day MUNs evolved from Model League of Nations, a simulation of the UN\'s failed predecessor). With the joint creative forces of innumerable creative minds from high school and college students (and increasing numbers of people beyond) MUNs have evolved and diversified at unthinking proportions over the years. Today, any council - real or fictional, futuristic or historical - that seeks to resolve disputes by means of meaningful diplomacy can be found simulated at a Model UN conference. The Best Delegate and other mentions add a competitive flair to the collaborative environment and help bring out the unprecedented from the council.</string>
    <string name="title_activity_about_us">About Us</string>
    <string name="title_activity_committees">Committees</string>
    <string name="detail_disec">The <b>Disarmament and International Security Committee</b> deals with disarmament, global challenges and threats to peace that affect the international community and seeks out solutions to the challenges in the international security.It considers all disarmament and international security matters within the scope of the Charter or relating to the powers and functions of any other organ of the United Nations.
\n\n <b>Agenda: </b> \n\n "Necessity of Military Aid in the 21st century" </string>
    <string name="detail_unsc">The <b>Security Council</b> is the United Nations\' most powerful body, with \"primary responsibility for the maintenance of international peace and security.\" Five powerful countries sit as permanent members along with ten elected members with two-year terms. Since 1990, the Council has dramatically increased its activity and the council now meets in nearly continuous session.
    \n\n <b>Agenda: </b> \n\n "Nuclear Non Proliferation and the Democratic People's Republic of Korea" </string>
    <string name="title_activity_apply_now">Apply Now</string>

    <array name="string_array_apply">
        <item>Delegate</item>
        <item>Executive Board</item>
    </array>
    <array name="string_array_matrix">
        <item>UNHRC</item>
        <item>G20</item>
    </array>
    <array name="string_array_letter">
        <item>UNHRC</item>
    </array>
    <string name="title_activity_resources">Miscellaneous Resources</string>
    <string name="title_activity_sec">Our Team</string>
    <string name="title_activity_credits">App Credits</string>
    <string name="title_activity_gallery">Gallery</string>


</resources>