<?xml version="1.0" encoding="utf-8"?>
<!-- Use DrawerLayout as root container for activity -->
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">
        <LinearLayout
            android:id="@+id/content_frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/global"
            android:orientation="vertical">
            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="@style/AppTheme"
                android:background="@color/Black"
                app:titleTextColor="@color/White" />
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="200dp"
                            android:layout_height="200dp"
                            android:src="@drawable/mun_logo_iiita" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textSize="20sp"
                            android:textColor="@color/Black"
                            android:text="@string/mun_iiita"/>
                    </LinearLayout>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@color/Black"
                        android:textAlignment="center"
                        android:padding="10dp"
                        android:text="@string/sec_gen_title"/>
                        <ImageView
                            android:layout_width="3000dp"
                            android:layout_height="200dp"
                            android:layout_gravity="center"
                            android:src="@drawable/mantek"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textColor="@color/DarkBlue"
                            android:text="@string/sec_gen_name"
                            />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/sec_gen_title_name"
                        android:textColor="@color/Black"
                        />
                    <TextView
                        android:padding="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/Black"
                        android:text="@string/sec_general_msg"/>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    <!-- Container for contents of drawer - use NavigationView to make configuration easier -->
    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/White"
        android:fitsSystemWindows="true"
        app:menu="@menu/drawer_view"
        app:itemTextColor="@color/Black"
        app:itemIconTint="@color/Black"
        app:headerLayout="@layout/nav_header"/>

</android.support.v4.widget.DrawerLayout>